--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ build/
 ### VS Code ###
 .vscode/
 
+
 <mxfile host="app.diagrams.net" modified="2025-10-26T00:00:00.000Z" agent="Claude" version="21.0.0">
   <diagram name="Business Flow" id="business-flow">
     <mxGraphModel dx="1434" dy="844" grid="1" gridSize="10" guides="1" tooltips="1" connect="1" arrows="1" fold="1" page="1" pageScale="1" pageWidth="1600" pageHeight="1200" math="0" shadow="0">
@@ -118,12 +119,16 @@ build/
           <mxGeometry x="850" y="425" width="120" height="60" as="geometry" />
         </mxCell>
         
-        <mxCell id="failed-records-db" value="Failed Records&lt;br&gt;Database" style="shape=cylinder;whiteSpace=wrap;html=1;boundedLbl=1;backgroundOutline=1;size=15;fillColor=#f8cecc;strokeColor=#b85450;" vertex="1" parent="1">
+        <mxCell id="success-records-db" value="Records&lt;br&gt;Database" style="shape=cylinder;whiteSpace=wrap;html=1;boundedLbl=1;backgroundOutline=1;size=15;fillColor=#d5e8d4;strokeColor=#82b366;" vertex="1" parent="1">
+          <mxGeometry x="1040" y="290" width="100" height="80" as="geometry" />
+        </mxCell>
+        
+        <mxCell id="failed-records-db" value="Records&lt;br&gt;Database" style="shape=cylinder;whiteSpace=wrap;html=1;boundedLbl=1;backgroundOutline=1;size=15;fillColor=#f8cecc;strokeColor=#b85450;" vertex="1" parent="1">
           <mxGeometry x="1040" y="415" width="100" height="80" as="geometry" />
         </mxCell>
         
-        <mxCell id="ack-queue" value="ACK" style="rounded=1;whiteSpace=wrap;html=1;fillColor=#d5e8d4;strokeColor=#82b366;" vertex="1" parent="1">
-          <mxGeometry x="850" y="330" width="80" height="40" as="geometry" />
+        <mxCell id="ack-queue" value="Send ACK" style="rounded=1;whiteSpace=wrap;html=1;fillColor=#d5e8d4;strokeColor=#82b366;" vertex="1" parent="1">
+          <mxGeometry x="1240" y="345" width="100" height="60" as="geometry" />
         </mxCell>
         
         <!-- Flow 2 Arrows -->
@@ -145,7 +150,7 @@ build/
         <mxCell id="arrow-2-6" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;" edge="1" parent="1" source="external-api" target="retry-logic">
           <mxGeometry relative="1" as="geometry" />
         </mxCell>
-        <mxCell id="arrow-2-7" value="Success" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;strokeColor=#82b366;" edge="1" parent="1" source="retry-logic" target="ack-queue">
+        <mxCell id="arrow-2-7" value="Success" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;strokeColor=#82b366;entryX=0;entryY=0.5;entryDx=0;entryDy=0;entryPerimeter=0;" edge="1" parent="1" source="retry-logic" target="success-records-db">
           <mxGeometry relative="1" as="geometry" />
         </mxCell>
         <mxCell id="arrow-2-8" value="Final Failure" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;strokeColor=#b85450;" edge="1" parent="1" source="retry-logic" target="failed-records-db">
@@ -158,6 +163,12 @@ build/
               <mxPoint x="717" y="390" />
             </Array>
           </mxGeometry>
+        </mxCell>
+        <mxCell id="arrow-2-10" value="After logging" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;entryX=0;entryY=0.5;entryDx=0;entryDy=0;" edge="1" parent="1" source="success-records-db" target="ack-queue">
+          <mxGeometry relative="1" as="geometry" />
+        </mxCell>
+        <mxCell id="arrow-2-11" value="After logging" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;entryX=0;entryY=0.5;entryDx=0;entryDy=0;" edge="1" parent="1" source="failed-records-db" target="ack-queue">
+          <mxGeometry relative="1" as="geometry" />
         </mxCell>
         
         <!-- Flow 3: Retry Failed Records -->
@@ -177,19 +188,20 @@ build/
           <mxGeometry x="460" y="740" width="120" height="60" as="geometry" />
         </mxCell>
         
-        <mxCell id="message-queue-3" value="Message Queue&lt;br&gt;(Redis Stream)" style="shape=trapezoid;perimeter=trapezoidPerimeter;whiteSpace=wrap;html=1;fixedSize=1;fillColor=#e1d5e7;strokeColor=#9673a6;" vertex="1" parent="1">
-          <mxGeometry x="660" y="735" width="140" height="70" as="geometry" />
-        </mxCell>
-        
         <!-- Flow 3 Arrows -->
         <mxCell id="arrow-3-1" value="Poll" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;" edge="1" parent="1" source="polling-scheduler" target="failed-records-db-3">
           <mxGeometry relative="1" as="geometry" />
         </mxCell>
-        <mxCell id="arrow-3-2" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;" edge="1" parent="1" source="failed-records-db-3" target="retry-processor">
+        <mxCell id="arrow-3-2" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;exitX=1;exitY=0.5;exitDx=0;exitDy=0;exitPerimeter=0;" edge="1" parent="1" source="failed-records-db-3" target="retry-processor">
           <mxGeometry relative="1" as="geometry" />
         </mxCell>
-        <mxCell id="arrow-3-3" value="Send to Queue" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;" edge="1" parent="1" source="retry-processor" target="message-queue-3">
-          <mxGeometry relative="1" as="geometry" />
+        <mxCell id="arrow-3-3" value="Update retry fields" style="edgeStyle=orthogonalEdgeStyle;rounded=0;orthogonalLoop=1;jettySize=auto;html=1;entryX=1;entryY=0.5;entryDx=0;entryDy=0;entryPerimeter=0;" edge="1" parent="1" source="retry-processor" target="failed-records-db-3">
+          <mxGeometry relative="1" as="geometry">
+            <Array as="points">
+              <mxPoint x="520" y="820" />
+              <mxPoint x="330" y="820" />
+            </Array>
+          </mxGeometry>
         </mxCell>
         
         <!-- Flow 4: Error Handling -->
@@ -267,3 +279,4 @@ build/
     </mxGraphModel>
   </diagram>
 </mxfile>
+
